--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ frozenlist==1.6.0
 h11==0.16.0
 idna==3.10
 multidict==6.4.3
+mysql-connector-python==9.3.0
 outcome==1.3.0.post0
 packaging==25.0
+pillow==11.2.1
 propcache==0.3.1
 pycparser==2.22
 PySocks==1.7.1
